# wheel-version

./: .pre-commit-config.yaml  .taplo.toml  README.md  pyproject.toml  wheel_version.py
.github/workflows/: ci.yml  release.yml
